# ComfyUI-HYRadio

./: .gitignore  BUG_LOG.md  CLAUDE.md  README.md  __init__.py  _scan_topology.py  inject_sd35.py  install.py  prestartup_script.py  prune_nodes.py  pyproject.toml  requirements.txt
config/: episode_cast.txt
docs/: PIPELINE_PROMPTS_QA.md  SOAK_PROMPT_ANTIGRAVITY.md  worldstereo_integration_plan.md
docs/superpowers/specs/: 2026-04-12-visual-sidecar-design.md  2026-04-15-hyworld-integration-plan-review.md
hyworld2/worldrecon/: gradio_app.py  pipeline.py
nodes/: __init__.py  _vram_log.py  audio_enhance.py  bark_tts.py  batch_audiogen_generator.py  batch_bark_generator.py  batch_kokoro_generator.py  batch_procedural_sfx.py  cinematography.py  kokoro_announcer.py  llm_environment_bridge.py  musicgen_theme.py  panorama_mapper.py  per_scene_splats.py  project_state.py  render_output.py  scene_sequencer.py  sfx_generator.py  story_orchestrator.py  string_list_literal.py  video_engine.py  visual_compositor.py  visual_renderer.py  vram_guardian.py  world_batching.py  world_mirror.py  world_mirror_v1.py  world_mirror_v2.py  world_stereo.py
output/hyradio/: qa_debug_39fc8e28abe0.json  qa_debug_4d77121fb030.json  qa_debug_653e65c4964a.json
scripts/: build_gsplat.py  extract_worldplay_weights.py  pipinstall.bat  soak_operator.py  treatment_scanner.py  watcher_overrides.json
tests/: _fix_workflow.py  _git_push.py  _run_baseline.py  clean_aesthetics.py  debug_prompt.json  fix_latent_batch.py  full_regression.py  inject_node_106.py  inject_real_gaslight_scenes.py  metadata.txt  patch_zod.py  print_pos.py  sanitize_json_links.py  test_arc_check.py  test_audio_byte_identical.py  test_core.py  test_dropdown_guardrails.py  test_widget_drift_guard.py  update_audio_json.py  update_test_json.py  use_full_episode.py  validate_test_json.py  vram_profile_test.py
tests/_reports/: vram_profile_report.json
visual_sidecar/: __init__.py
visual_sidecar/schema/: visual_plan.schema.json
workflows/: HYRadio-Full-Pipeline.json  HYRadio-Full-Pipeline.json.backup  HYRadio-Pano-Basic.json  HYRadio-Visual-Fast.json  HYRadio-Visual-FastTest.json  HYRadio-Visual-Test.json  HYRadio-Visual-Test.json.backup
worldmirror/: __init__.py
worldmirror/src/: __init__.py
worldmirror/src/models/: __init__.py
worldmirror/src/utils/: __init__.py  fast_ply_render.py  save_utils.py  visual_util.py
worldmirror/training/: __init__.py
(+20 files in other folders)
