[project]
name = "comfyui-hyworld2"
version = "1.0.0"
description = "HY-World 2.0 ComfyUI nodes — WorldMirror V1 & V2 3D reconstruction"
license = { file = "LICENSE" }
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "Pillow",
    "opencv-python",
    "huggingface_hub",
    "safetensors",
    "omegaconf",
    "plyfile",
    "trimesh",
    "scipy",
    "tqdm",
    "einops",
    "open3d>=0.18.0",
]

[project.optional-dependencies]
gsplat = ["gsplat>=1.5.3"]
fp8 = ["torchao"]
colmap = ["pycolmap==3.10.0"]
video = ["moviepy==1.0.3"]
skyseg = ["onnxruntime"]

[tool.comfy]
PublisherId = "vnccs-hyworld2"
DisplayName = "HY-World 2.0 — WorldMirror 3D"
Icon = ""
Repository = "https://github.com/AHEKOT/ComfyUI_HYWorld2"
